[package]
name = "api"
version = "2.1.6"
edition = "2024"

[dependencies]
axum = "0.8.1"
colored = "3.0.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "chrono", "uuid"] }
dotenvy = "0.15.7"
rustis = "0.13.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tokio = { version = "1.43.0", features = ["full"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "preserve_order", "chrono"] }
utoipa-axum = "0.2.0"
chrono = { version = "0.4.40", features = ["serde"] }
indexmap = { version = "2.7.1", features = ["serde"] }
tower-http = { version = "0.6.2", features = ["catch-panic", "trace", "cors"] }
sentry = { version = "0.36.0", default-features = false, features = ["rustls", "reqwest", "backtrace", "contexts", "debug-images", "panic"] }
tracing = "0.1.41"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
nestify = "0.3.3"
sha2 = "0.10.8"
sentry-tower = { version = "0.36.0", features = ["http", "axum-matched-path"] }
sha1 = "0.10.6"
